[package]
name = "shasum"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rollins <philipwaynerollins@gmail.com>"]
description = "A file hashing utility with progress indication"

[dependencies]
sha1 = "0.10"
sha2 = "0.10"
indicatif = "0.17.3"
hex = "0.4.3"
clap = { version = "4.1", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8.1"

[profile.release]
opt-level = 'z'
lto = true
strip = true
panic = "abort"
debug = false